product section alignment issue fix

--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -30,6 +30,14 @@
     padding: 0 10px;
   }
 }
+.fz_product_sec .container .fz_product_left .item-1 {
+  padding-top: 178px;
+}
+@media screen and (max-height: 767px) {
+  .fz_product_sec .container .fz_product_left .item-1 {
+    padding-top: 150px;
+  }
+}
 .fz_product_sec .container .fz_product_left .fz_sub_container {
   display: flex;
   height: 100vh;
@@ -38,14 +46,6 @@
   .fz_product_sec .container .fz_product_left .fz_sub_container {
     height: auto;
     flex-direction: column;
-  }
-}
-.fz_product_sec .container .fz_product_left .fz_sub_container .item-1 {
-  padding-top: 178px;
-}
-@media screen and (max-height: 767px) {
-  .fz_product_sec .container .fz_product_left .fz_sub_container .item-1 {
-    padding-top: 150px;
   }
 }
 .fz_product_sec .container .fz_product_left .fz_sub_container .fz_content {
